--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<head>
+  <title>Flatiron School</title>
+</head>
+<body></body>
+
+
 <a href="https://flatironschool.com"></a>
