--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!-- Write your HTML in this file -->
 <!DOCTYPE html>
+<html></html>
 <head>
   <title>Flatiron School</title>
 </head>
-<body></body>
+<body>
 
 
 <a href="https://flatironschool.com"></a>
+</body>
