Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Write your HTML in this file -->
 <!DOCTYPE html>
-<html></html>
+<html>
 <head>
   <title>Flatiron School</title>
 </head>
@@ -9,3 +9,5 @@
 
 <a href="https://flatironschool.com"></a>
 </body>
+
+</html>
