--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 
-<a href="https://flatironschool.com" alt="Flatiron School"></a>
+<a href="https://flatironschool.com">Flatiron School</a>
 </body>
 
 </html>
